<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astra_camera</name>
  <version>2.1.1</version>
  <description>Drivers for Orbbec Astra Devices.</description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/ros2/ros_astra_camera</url>
  <url type="bugtracker">https://github.com/ros2/ros_astra_camera/issues</url>
  <author email="liuhua@orbbec.com">Tim Liu</author>

  <build_depend>git</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
